packages/ilib-loctool-salesforce-metaxml/samples/salesforce/force-app/main/default/objects/Foo__c/fields/AccessToken_Expr__c.field-meta.xml
<CustomField>
    <fullName>AccessToken_Expr__c</fullName>
    <label x-i18n="comment">Access token expired</label>
    <description>This is a test.</description>
    <type>DateTime</type>
</CustomField>