packages/ilib-loctool-salesforce-metaxml/samples/salesforce/force-app/main/default/objects/Foo__c/fields/Collaboration__c.field-meta.xml
<CustomField>
    <fullName>Collaboration__c</fullName>
    <label x-i18n="comment">Collaboration</label>
    <description>This is a test.</description>
    <inlineHelpText>This is inline help text</inlineHelpText>
    <type>Checkbox</type>
</CustomField>