packages/ilib-loctool-salesforce-metaxml/samples/salesforce/force-app/main/default/objects/Foo__c/fields/Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>Retry_Count__c</fullName>
    <label x-i18n="comment">Retry Count</label>
    <description>This is a test.</description>
    <inlineHelpText>This is inline help text</inlineHelpText>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>