packages/ilib-loctool-salesforce-metaxml/samples/salesforce/force-app/main/default/objects/Foo__c/listviews/ListView.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <label x-i18n="comment">All items</label>
</ListView>